@@ -1,6 +1,6 @@
 package com.swiftedge.projectservice.service;
 
-import com.swiftedge.projectservice.dto.ProjectStatusDTO;
+import com.swiftedge.dtolibrary.dto.StatusDTO;
 import com.swiftedge.projectservice.entity.ProjectStatus;
 import com.swiftedge.projectservice.repository.ProjectStatusRepository;
 import lombok.AllArgsConstructor;
@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Getter
@@ -20,12 +19,15 @@ import java.util.stream.Collectors;
 public class ProjectStatusService {
     private final ProjectStatusRepository projectStatusRepository;
 
-    public List<ProjectStatusDTO> getAllProjectStatus() {
+    public List<StatusDTO> getAllProjectStatus() {
         return projectStatusRepository.findAll().stream()
-                .map(status -> new ProjectStatusDTO(status.getId(),
-                        status.getStatus(), 0L))
-                .collect(Collectors.toList());
+                .map(status -> new StatusDTO(
+                        status.getId(),
+                        status.getStatus(),
+                        0L))
+                .toList();
     }
+
 
     public Optional<ProjectStatus> getStatusById(Long id) {
         return projectStatusRepository.findById(id);
